--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Menencia",
   "dependencies": {
     "discord.io": "^2.5.2",
+    "ioredis": "^3.2.1",
     "winston": "^2.3.1"
   }
 }
