--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "discord.io": "^2.5.2",
     "ioredis": "^3.2.1",
+    "lodash": "^4.17.4",
     "winston": "^2.3.1"
   }
 }
