--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
   "main": "bot.js",
   "author": "Menencia",
   "dependencies": {
-    "discord.io": "^2.5.2",
+    "discord.js": "^11.2.1",
     "ioredis": "^3.2.1",
-    "lodash": "^4.17.4",
-    "winston": "^2.3.1"
+    "lodash": "^4.17.4"
   }
 }
