--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "bot.js",
   "author": "Menencia",
   "dependencies": {
+    "cron": "^1.3.0",
     "discord.js": "^11.2.1",
     "ioredis": "^3.2.1",
     "lodash": "^4.17.4"
