--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "ffbe bot",
   "main": "bot.js",
   "author": "Menencia",
+  "scripts": {
+    "start": "node bot.js"
+  },
   "dependencies": {
     "cron": "^1.3.0",
     "discord.js": "^11.2.1",
