--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "bot.js",
   "author": "Menencia",
   "scripts": {
-    "start": "node bot.js"
+    "start": ""
   },
   "dependencies": {
     "cron": "^1.3.0",
