--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "bot.js",
   "author": "Menencia",
   "dependencies": {
+    "ascii-table": "0.0.9",
     "cron": "^1.3.0",
     "discord.js": "^11.2.1",
     "ioredis": "^3.2.1",
