--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "bot.js",
   "author": "Menencia",
   "dependencies": {
-    "ascii-table": "0.0.9",
     "cron": "^1.3.0",
     "discord.js": "^11.2.1",
     "ioredis": "^3.2.1",
-    "lodash": "^4.17.4"
+    "lodash": "^4.17.4",
+    "markdown-table": "^1.1.1"
   }
 }
