--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "cron": "^1.3.0",
     "discord.js": "^11.2.1",
     "ioredis": "^3.2.1",
-    "lodash": "^4.17.4",
-    "markdown-table": "^1.1.1"
+    "lodash": "^4.17.4"
   }
 }
