--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "cron": "^1.3.0",
     "discord.js": "^11.2.1",
     "ioredis": "^3.2.1",
-    "lodash": "^4.17.4"
+    "lodash": "^4.17.4",
+    "moment": "^2.19.2"
   }
 }
