--- a/package.json
+++ b/package.json
@@ -4,12 +4,21 @@
   "description": "ffbe bot",
   "main": "bot.js",
   "author": "Menencia",
+  "scripts": {
+    "start": "node app.js"
+  },
   "dependencies": {
     "ascii-table": "0.0.9",
     "cron": "^1.3.0",
     "discord.js": "^11.2.1",
+    "dotenv": "^6.0.0",
     "ioredis": "^3.2.1",
     "lodash": "^4.17.4",
     "moment": "^2.19.2"
+  },
+  "devDependencies": {
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb-base": "^13.0.0",
+    "eslint-plugin-import": "^2.13.0"
   }
 }
