--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "cron": "^1.3.0",
     "discord.js": "^11.2.1",
     "dotenv": "^6.0.0",
+    "fast-html-parser": "^1.0.1",
     "ioredis": "^3.2.1",
     "lodash": "^4.17.4",
-    "moment": "^2.19.3"
+    "moment": "^2.19.3",
+    "node-fetch": "^2.1.2"
   },
   "devDependencies": {
     "eslint": "^4.19.1",
